# avionics_wifi

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENCE.md  Makefile  README.md  package.json  sdkconfig  sdkconfig.defaults  sdkconfig.old  sdkconfig.osx  sdkconfig.sample  sdkconfig.ubuntu  webpack.common.config.coffee  webpack.config.coffee  webpack.development.config.coffee  webpack.production.config.coffee
main/: CMakeLists.txt  Kconfig.projbuild  baro.cpp  baro.hpp  can_interface.cpp  can_interface.hpp  component.mk  data_reader.cpp  data_reader.hpp  data_storage.hpp  demo.cpp  demo.hpp  gyro.cpp  gyro.hpp  main.cpp  main.hpp  status.cpp  status.hpp  webserver.cpp  webserver.hpp  wifi.cpp  wifi.hpp
main/html/: avionics.js  index.html
main/server/: 404.html  bundle.js  component.mk  index.html
src/: avionics.js  index.ejs  index.js  modal.html
